package fr.projava.triangle.Controllers;

public class DataBaseController {
}
