@startuml

title __TRIANGLE's Class Diagram__\n
    package fr.projava.triangle{
        package Controllers{
            class fr.projava.triangle.Controllers.AccountController {
            }
            class fr.projava.triangle.Controllers.ConversationController {
            }
            class fr.projava.triangle.Controllers.DatabaseController {
            }
            class fr.projava.triangle.Controllers.NetworkController {
            }
            class fr.projava.triangle.Controllers.ThreadController {
            }
        }

        package Models{
            class fr.projava.triangle.Models.MThread {
            }
            class fr.projava.triangle.Models.Message {
            }
            class fr.projava.triangle.Models.User {
            }
        }

        package Views {
            class fr.projava.triangle.Views.AuthWindowController {
            }
            class fr.projava.triangle.Views.ChatWindowController {
            }
        }

        class fr.projava.triangle.Launcher {
        }
        class fr.projava.triangle.mainApp {
        }
    }



    fr.projava.triangle.Views.AuthWindowController --> fr.projava.triangle.Controllers.AccountController : calls
    fr.projava.triangle.Views.ChatWindowController --> fr.projava.triangle.Controllers.AccountController : calls
    fr.projava.triangle.mainApp--> fr.projava.triangle.Controllers.AccountController : calls

    fr.projava.triangle.Views.ChatWindowController --> fr.projava.triangle.Controllers.ConversationController : calls
    fr.projava.triangle.Models.MThread --> fr.projava.triangle.Controllers.ConversationController : calls

    fr.projava.triangle.Controllers.AccountController --> fr.projava.triangle.Controllers.DatabaseController : calls
    fr.projava.triangle.Controllers.ConversationController --> fr.projava.triangle.Controllers.DatabaseController : calls
    fr.projava.triangle.mainApp --> fr.projava.triangle.Controllers.DatabaseController: calls

    fr.projava.triangle.Controllers.ThreadController --> fr.projava.triangle.Controllers.NetworkController : calls
    fr.projava.triangle.Controllers.AccountController --> fr.projava.triangle.Controllers.NetworkController : calls
    fr.projava.triangle.Models.MThread --> fr.projava.triangle.Controllers.NetworkController : calls

    fr.projava.triangle.Controllers.AccountController --> fr.projava.triangle.Controllers.ThreadController : calls
    fr.projava.triangle.Controllers.ConversationController --> fr.projava.triangle.Controllers.ThreadController : calls
    fr.projava.triangle.mainApp --> fr.projava.triangle.Controllers.ThreadController : calls




    fr.projava.triangle.Controllers.NetworkController --> fr.projava.triangle.Models.User : uses
    fr.projava.triangle.Controllers.ThreadController --> fr.projava.triangle.Models.MThread : uses
    fr.projava.triangle.Controllers.ThreadController --> fr.projava.triangle.Models.User : uses
    fr.projava.triangle.Controllers.DatabaseController --> fr.projava.triangle.Models.Message : uses
    fr.projava.triangle.Controllers.ConversationController --> fr.projava.triangle.Models.Message : uses
    fr.projava.triangle.Controllers.ConversationController --> fr.projava.triangle.Models.User : uses
    fr.projava.triangle.Controllers.AccountController --> fr.projava.triangle.Models.User : uses
    fr.projava.triangle.Models.MThread o-- fr.projava.triangle.Models.User : receiver
    fr.projava.triangle.Models.MThread o-- fr.projava.triangle.Models.User : sender
    fr.projava.triangle.Objects.MessageObject -up-|> javafx.scene.control.Label
    fr.projava.triangle.Objects.UserObject -up-|> javafx.scene.control.Button
    fr.projava.triangle.Objects.UserObject o-- fr.projava.triangle.Models.User : user
    fr.projava.triangle.Observers.ConnectedUsersObserver .up.|> fr.projava.triangle.Observers.Observer
    fr.projava.triangle.Observers.ConnectedUsersObserver o-- fr.projava.triangle.Views.ChatWindowController : cwc
    fr.projava.triangle.Observers.ReceivedMessageObserver .up.|> fr.projava.triangle.Observers.Observer
    fr.projava.triangle.Observers.ReceivedMessageObserver o-- fr.projava.triangle.Views.ChatWindowController : cwc
    fr.projava.triangle.Views.ChatWindowController .up.|> javafx.fxml.Initializable
    fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.ConnectedUsersObserver : connectedUsersObserver
    fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.ReceivedMessageObserver : receivedMessageObserver
    fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.Subject : subject
    fr.projava.triangle.mainApp -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
